# frictionless-dfour

./: .gitignore  CHANGELOG.md  LICENSE.md  MANIFEST.in  Makefile  README.md  Readme.md  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  main.yaml
data/: dfour.yaml  perimeter.json  types.json
frictionless_dfour/: __init__.py  __main__.py  config.py  dfour.py  storage.py  style.py
frictionless_dfour/assets/: VERSION
frictionless_dfour/program/: __init__.py  common.py  main.py  workspace.py
tests/: conftest.py  test_dfour.py
tests/program/: test_workspace.py
