[metadata]
name = frictionless_dfour
version = 0.0.1
author = Thorben Westerhuys
author_email = thorben@cividi.ch
description = Dfour Storage for frictionless-py
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/cividi/frictionless-dfour
project_urls =
    Bug Tracker = https://github.com/cividi/frictionless-dfour/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    frictionless
    gql
    shapely

[options.packages.find]
where = .

[options.extras_require]
dev =
    frictionless
    black
    pytest
    pytest_cov
    pylama

[bdist_wheel]
universal=1